# DataBlocksExchange

./: CMakeLists.txt  README.md  client.cpp  main.cpp
include/: async.h  async_client.h  batch_command.h  batch_command_handler.h  block_device_reader.h  data_block.h  tokenizer.h
include/data/: block_device_reader.h  data_block.h  data_block_handler.h  data_serialization.h  idevice_reader.h
include/network/: async_client.h  server.h  session.h
include/outputs/: console_output.h  ioutput.h  logfile_output.h
src/: async.cpp  async_client.cpp  batch_command.cpp  batch_command_handler.cpp  block_device_reader.cpp  client.cpp  tokenizer.cpp
src/data/: block_device_reader.cpp  data_block_handler.cpp  data_serialization.cpp
src/network/: async_client.cpp  server.cpp  session.cpp
src/outputs/: console_output.cpp  logfile_output.cpp
tests/: test_batch_command_handler.cpp  test_data_block_exchange.cpp
